# shellwright

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  npm-publish.yml  release.yml
cli-tests/DotnetSpectreTest/: Program.cs
npm/shellwright/: package.json
npm/shellwright-darwin-arm64/: package.json
npm/shellwright-darwin-x64/: package.json
npm/shellwright-linux-x64/: package.json
npm/shellwright-win32-x64/: package.json
npm/shellwright/scripts/: postinstall.js
skills/shellwright/: SKILL.md
src/: config.rs  lib.rs
src/cli/: commands.rs  output.rs
src/daemon/: client.rs  protocol.rs  server.rs
src/output/: mod.rs  ring_buffer.rs  sanitizer.rs  transcript.rs  vt_parser.rs
src/prompt/: calibrator.rs  detector.rs  mod.rs  patterns.rs  settle.rs
src/pty/: mod.rs  pipe_fallback.rs  runner.rs
src/security/: danger.rs  mod.rs  redactor.rs
src/session/: manager.rs  mod.rs  session.rs  state.rs
tests/: e2e.rs  integration.rs  unit.rs
tests/e2e/: dotnet_spectre_test.rs
tests/fixtures/prompts/: bash_prompt.txt  interactive_prompts.txt
tests/integration/: concurrent_sessions_test.rs  cross_platform_test.rs  daemon_ipc_test.rs  output_pipeline_test.rs  prompt_detection_test.rs  session_lifecycle_test.rs  wait_for_test.rs
tests/unit/: danger_test.rs  prompt_calibrator_test.rs  prompt_detector_test.rs  redactor_test.rs  ring_buffer_test.rs  sanitizer_test.rs  session_manager_test.rs  session_state_test.rs  settle_test.rs  vt_parser_test.rs
