[package]
name = "shellwright"
version = "0.1.0"
edition = "2021"
description = "Universal CLI Session Broker for AI Agents — Playwright for CLIs"
license = "MIT"
repository = "https://github.com/shellwright/shellwright"
readme = "README.md"
keywords = ["cli", "pty", "terminal", "ai-agent", "session"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "shellwright"
path = "src/bin/shellwright.rs"

[[bin]]
name = "shellwrightd"
path = "src/bin/shellwrightd.rs"

[dependencies]
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
vt100 = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
